@@ -1,3 +1,8 @@
+Fri Jan 27 16:49:10 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/Mesher.java
+	  src/org/jcae/mesh/xmldata/UNVConverter.java: New exportSTL keyword.
+
 Thu Jan 26 12:18:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Add a new constructor, to specify the number of triangles in final mesh.
